# hacktoberfest2021

./: .gitignore  .project  3. DEQUEUE_ARRAY.c  4graph_weighted.cpp  Add 1 to number represented by the linked list.cpp  Bank Management System  Bnker's Algo  Bottom view of the Binary tree.cpp  CONTRIBUTING.md  Calculator In C  Calculator.c  Check if Matrix is Sparse  Counting inversions  Diagonal Move  DoublyLinkedList.cpp  DutchNationalflagAlgo  Fibonacci  Floyd'sDetection Cycle Algorithm  From 2 list put odd and even index element in a 3rd list  GraphUsingArrayOfList  HANGMAN.py  HTML form  Heap_Sort  Implement of LCS  Implementation of Deque in Java (Easy method)  InterpolationSearch.py  Kadane.java  KadanesAlgorithm.java  LICENSE  Linear_Search_1.c  Linked List  Matrix_multiplication.cpp  Merge sort on doubly linked list.cpp  Preorder, Inorder and Postorder Traversal in Binary Tree  Prime Spiral Matrix.java  Print Nodes in Top view of Binary tree.cpp  README.md  Read Write in File.c  Reverse Linked List by Iterative Method.cpp  Reverse Linked List by Recursive Method  (+56 more)
Algorithms/: Dynamic Programming
Bash/: tvb.sh
C/: AVL_Tree.C  Array_Reversal.c  Binary Search  BuubleSort.c  CircularLinkedList  DistinctSubsetOrSubsequenceOfArray.c  Linear search  (+16 more)
C++/: Alternate Star Pattern  BubbleSort.cpp  Bubble_Sort.cpp  CodechefSnackdownSol1.cpp  CodechefSnackdownSol2.cpp  Omar.cpp  Operating Systems  ParanthesisProblem.cpp  ParenthesisChecker.cpp  pigeonholesort.cpp  shyam.cpp  suffix tree pattern serch algo
Rust/rust_mongodb/: Cargo.toml
Rust/rust_mongodb/src/: main.rs
(+2961 files in other folders)
