[package]
name = "hello_mongodb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.1"
tokio = { version = "1.11.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }